manifest/green-web/svc-green-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: green-web
