manifest/green-web/ingress-green-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: green-web.kongkang.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: green-web
            port:
              number: 80
